[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "ipywebgl"
description = "WebGL2 jupyter widget"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Jerome Eippers", email = "jerome@eippers.be" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
    "numpy",
]
version = "0.1.1"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []

[project.urls]
Homepage = "https://github.com/JeromeEippers/ipywebgl"

[tool.hatch.build]
artifacts = [
    "ipywebgl/nbextension/index.*",
    "ipywebgl/labextension/*.tgz",
    "ipywebgl/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipywebgl/nbextension" = "share/jupyter/nbextensions/ipywebgl"
"ipywebgl/labextension" = "share/jupyter/labextensions/ipywebgl"
"./install.json" = "share/jupyter/labextensions/ipywebgl/install.json"
"./ipywebgl.json" = "etc/jupyter/nbconfig/notebook.d/ipywebgl.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipywebgl/nbextension/index.js",
    "ipywebgl/labextension/package.json",
]
skip-if-exists = [
    "ipywebgl/nbextension/index.js",
    "ipywebgl/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
    "numpy",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
